<resources>
    <string name="app_name">Matches Boxes</string>
    <string name="no_bags_added">No bags added</string>
    <string name="enter_bag_name">Enter bag name</string>
    <string name="bag_added">Bag added</string>
    <string name="bag_updated">Bag updated</string>
    <string name="bag_deleted">Bag deleted</string>
    <string name="delete">Delete</string>
    <string name="bags_label">Bags</string>
    <string name="edit_bag_label">Edit Bag</string>
    <string name="no_matches_box_sets_added">No matches box sets added</string>
    <string name="enter_matches_box_set_name">Enter matches box set name</string>
    <string name="matches_box_set_added">Matches box set added</string>
    <string name="edit">Edit</string>
    <string name="no_matches_boxes_added">No matches boxes added</string>
    <string name="enter_box_name">Enter matches box name</string>
    <string name="box_added">Matches Box added</string>
    <string name="matches_box_set_updated">Matches Box Set updated</string>
    <string name="matches_box_set_deleted">Matches box set deleted</string>
    <string name="no_components_added">No radio components added</string>
    <string name="enter_component_name">Enter component name</string>
    <string name="enter_qunatity">Enter qunatity</string>
    <string name="component_added">Component added</string>
    <string name="component_updated">Component updated</string>
    <string name="component_deleted">Component deleted</string>
    <string name="box_updated">Matches box updated</string>
    <string name="box_deleted">Matches Box Deleted</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="button_minus" translatable="false">-</string>
    <string name="add_bag">Add Bag</string>
    <string name="update_bag">Update Bag</string>
    <string name="add_set">Add Set</string>
    <string name="update_set">Update Set</string>
    <string name="add_box">Add Box</string>
    <string name="update_box">Update Box</string>
    <string name="add_component">Add Component</string>
    <string name="update_component">Update Component</string>
    <string name="search">Search</string>
    <string name="no_components_found">No components found</string>
    <string name="search_components">Search components</string>
    <string name="buy_components">Buy components</string>
    <string name="buy_component">Buy</string>
    <string name="quantity_hint" translatable="false">0</string>
    <string name="direcotry_icon">Directory Icon</string>
    <string name="component_icon">Component icon</string>
    <string name="details">Details</string>
    <string name="no_sets">No Sets</string>
    <string name="no_boxes">No boxes</string>
    <string name="no_bags">No bags</string>
    <string name="save_component_error">Save component error</string>
    <string name="no_history">History is empty</string>
    <string name="history">History</string>
    <string name="history_title">Components History</string>
    <string name="history_icon">History icon</string>
    <string name="info">Info</string>
    <string name="buy">Buy</string>
    <string name="no_popular_components">No popular components</string>
    <string name="popular">Popular</string>
    <string name="popular_components">Popular Components</string>
    <string name="empty_search_label" translatable="false">" "</string>
    <string name="components">Components</string>
    <string name="navigation_error">Navigation error</string>
    <string name="edit_component">Edit radio component</string>
    <string name="save_component">Save radio component</string>
    <string name="save_set">Save matches box set</string>
    <string name="save_box">Save matches box</string>
    <string name="bag_icon_description">Bag icon</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="set_icon_description">Matches box set icon description</string>
    <string name="box_icon_description">Box Icon</string>
    <string name="component_icon_description">Radio component icon</string>
    <string name="save_name">Save name</string>
    <string name="enter_name">Enter name</string>
    <plurals name="components_quantity">
        <item quantity="one">%s component</item>
        <item quantity="other">%s components</item>
    </plurals>
</resources>
