...
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:context=".component.addeditdelete.RadioComponentManipulatorFragment">

            <EditText
                android:id="@+id/component_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:hint="@string/enter_component_name"
                android:text="@={viewModel.name}"
                app:layout_constraintBottom_toTopOf="@+id/quantity_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boxes_spinner" />

            <EditText
                android:id="@+id/quantity_edit"
...
                app:layout_constraintStart_toStartOf="@+id/bags_spinner"
                app:layout_constraintTop_toTopOf="@+id/bags_spinner"
                app:noDataTextVisible="@{viewModel.noBagsTextVisible}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_component_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_done"
            android:onClick="@{() -> viewModel.saveItem()}"
            app:fabSize="normal"
...
